# samp_npcs

./: CMakeLists.txt
client/: CMakeLists.txt  hooks.cpp  pch.h
client/npcs_module/: npc.cpp  npc.h  npcs_module.cpp  npcs_module.h  utils.cpp  utils.h
server/: Npc.cpp  Npc.h  NpcComponent.cpp  NpcComponent.h  NpcNetwork.hpp  NpcTask.hpp  natives.cpp
server/pawn-include/: pears_npc.inc
